--- a/lessons/Supervised/3_EnsembleMethods/Spam_&_Ensembles.ipynb
+++ b/lessons/Supervised/3_EnsembleMethods/Spam_&_Ensembles.ipynb
@@ -6,17 +6,38 @@
    "source": [
     "## Our Mission ##\n",
     "\n",
-    "You recently used Naive Bayes to classify spam in this [dataset](https://archive.ics.uci.edu/ml/datasets/SMS+Spam+Collection). In this notebook, we will expand on the previous analysis by using a few of the new techniques you saw throughout this lesson.\n",
+    "You recently used Naive Bayes to classify spam in this [dataset](https://archive.ics.uci.edu/ml/datasets/SMS+Spam+Collection). In this notebook, we will expand on the previous analysis by using a few of the new techniques you've learned throughout this lesson.\n",
     "\n",
     "\n",
-    "> In order to get caught back up to speed with what was done in the previous notebook, run the cell below"
+    "> Let's quickly re-create what we did in the previous Naive Bayes Spam Classifier notebook. We're providing the essential code from that previous workspace here, so please run this cell below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score:  0.9885139985642498\n",
+      "Precision score:  0.9720670391061452\n",
+      "Recall score:  0.9405405405405406\n",
+      "F1 score:  0.9560439560439562\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "# Import our libraries\n",
     "import pandas as pd\n",
@@ -71,7 +92,7 @@
    "source": [
     "### Turns Out...\n",
     "\n",
-    "It turns out that our naive bayes model actually does a pretty good job.  However, let's take a look at a few additional models to see if we can't improve anyway.\n",
+    "We can see from the scores above that our Naive Bayes model actually does a pretty good job of classifying spam and \"ham.\"  However, let's take a look at a few additional models to see if we can't improve anyway.\n",
     "\n",
     "Specifically in this notebook, we will take a look at the following techniques:\n",
     "\n",
@@ -88,13 +109,13 @@
     "* **Ensemble learners** together in a way that allows those that perform best in certain areas to create the largest impact (boosting).\n",
     "\n",
     "\n",
-    "In this notebook, let's get some practice with these methods, which will also help you get comfortable with the process used for performing supervised machine learning in python in general.\n",
+    "In this notebook, let's get some practice with these methods, which will also help you get comfortable with the process used for performing supervised machine learning in Python in general.\n",
     "\n",
     "Since you cleaned and vectorized the text in the previous notebook, this notebook can be focused on the fun part - the machine learning part.\n",
     "\n",
     "### This Process Looks Familiar...\n",
     "\n",
-    "In general, there is a five step process that can be used each type you want to use a supervised learning method (which you actually used above):\n",
+    "In general, there is a five step process that can be used each time you want to use a supervised learning method (which you actually used above):\n",
     "\n",
     "1. **Import** the model.\n",
     "2. **Instantiate** the model with the hyperparameters of interest.\n",
@@ -109,11 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the Bagging, RandomForest, and AdaBoost Classifier\n"
+    "# Import the Bagging, RandomForest, and AdaBoost Classifier\n",
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n"
    ]
   },
   {
@@ -125,22 +149,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate a BaggingClassifier with:\n",
     "# 200 weak learners (n_estimators) and everything else as default values\n",
-    "\n",
+    "bagging_model = BaggingClassifier(n_estimators=200)\n",
     "\n",
     "\n",
     "# Instantiate a RandomForestClassifier with:\n",
     "# 200 weak learners (n_estimators) and everything else as default values\n",
-    "\n",
+    "forest_model = RandomForestClassifier(n_estimators=200)\n",
     "\n",
     "# Instantiate an a AdaBoostClassifier with:\n",
     "# With 300 weak learners (n_estimators) and a learning_rate of 0.2\n",
-    "\n"
+    "ada_model = AdaBoostClassifier(n_estimators=300)\n"
    ]
   },
   {
@@ -152,18 +176,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AdaBoostClassifier(algorithm='SAMME.R', base_estimator=None,\n",
+       "          learning_rate=1.0, n_estimators=300, random_state=None)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Fit your BaggingClassifier to the training data\n",
-    "\n",
+    "bagging_model.fit(training_data, y_train)\n",
     "\n",
     "# Fit your RandomForestClassifier to the training data\n",
-    "\n",
+    "forest_model.fit(training_data, y_train)\n",
     "\n",
     "# Fit your AdaBoostClassifier to the training data\n",
-    "\n"
+    "ada_model.fit(training_data, y_train)\n"
    ]
   },
   {
@@ -175,38 +211,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Predict using BaggingClassifier on the test data\n",
-    "\n",
+    "bagging_pred = bagging_model.predict(testing_data)\n",
     "\n",
     "# Predict using RandomForestClassifier on the test data\n",
-    "\n",
+    "forest_pred = forest_model.predict(testing_data)\n",
     "\n",
     "# Predict using AdaBoostClassifier on the test data\n",
-    "\n"
+    "ada_pred = ada_model.predict(testing_data)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Step 5:** Now that you have made your predictions, compare your predictions to the actual values using the function below for each of your models - this will give you the `score` for how well each of your models is performing.  It might also be useful to show the naive bayes model again here."
+    "> **Step 5:** Now that you have made your predictions, compare your predictions to the actual values using the function below for each of your models - this will give you the `score` for how well each of your models is performing. It might also be useful to show the Naive Bayes model again here, so we can compare them all side by side."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_metrics(y_true, preds, model_name=None):\n",
     "    '''\n",
     "    INPUT:\n",
-    "    y_true - the y values that are actually true in the dataset (numpy array or pandas series)\n",
-    "    preds - the predictions for those values from some model (numpy array or pandas series)\n",
+    "    y_true - the y values that are actually true in the dataset (NumPy array or pandas series)\n",
+    "    preds - the predictions for those values from some model (NumPy array or pandas series)\n",
     "    model_name - (str - optional) a name associated with the model if you would like to add it to the print statements \n",
     "    \n",
     "    OUTPUT:\n",
@@ -229,20 +265,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score for bagging_model : 0.9763101220387652\n",
+      "Precision score bagging_model : 0.9222222222222223\n",
+      "Recall score bagging_model : 0.8972972972972973\n",
+      "F1 score bagging_model : 0.9095890410958904\n",
+      "\n",
+      "\n",
+      "\n",
+      "Accuracy score for forest_model : 0.9842067480258435\n",
+      "Precision score forest_model : 1.0\n",
+      "Recall score forest_model : 0.8810810810810811\n",
+      "F1 score forest_model : 0.9367816091954023\n",
+      "\n",
+      "\n",
+      "\n",
+      "Accuracy score for ada_model : 0.9813352476669059\n",
+      "Precision score ada_model : 0.9595375722543352\n",
+      "Recall score ada_model : 0.8972972972972973\n",
+      "F1 score ada_model : 0.9273743016759777\n",
+      "\n",
+      "\n",
+      "\n",
+      "Accuracy score for naive_bayes : 0.9885139985642498\n",
+      "Precision score naive_bayes : 0.9720670391061452\n",
+      "Recall score naive_bayes : 0.9405405405405406\n",
+      "F1 score naive_bayes : 0.9560439560439562\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print Bagging scores\n",
-    "\n",
+    "print_metrics(y_test, bagging_pred, 'bagging_model')\n",
     "\n",
     "# Print Random Forest scores\n",
-    "\n",
+    "print_metrics(y_test, forest_pred, 'forest_model')\n",
     "\n",
     "# Print AdaBoost scores\n",
-    "\n",
+    "print_metrics(y_test, ada_pred, 'ada_model')\n",
     "\n",
     "# Naive Bayes Classifier scores\n",
+    "print_metrics(y_test, predictions, 'naive_bayes')\n",
     "\n"
    ]
   },
