--- a/lessons/Supervised/4_ModelEvaluationMetrics/Regression Metrics.ipynb
+++ b/lessons/Supervised/4_ModelEvaluationMetrics/Regression Metrics.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That's right!  All but logistic regression can be used for predicting numeric values.  And linear regression is the only one of these that you should not use for predicting categories.  Technically sklearn won't stop you from doing most of anything you want, but you probably want to treat cases in the way you found by answering this question!\n"
+     ]
+    }
+   ],
    "source": [
     "# When can you use the model - use each option as many times as necessary\n",
     "a = 'regression'\n",
@@ -49,11 +57,11 @@
     "c = 'both regression and classification'\n",
     "\n",
     "models = {\n",
-    "    'decision trees': # Letter here,\n",
-    "    'random forest': # Letter here,\n",
-    "    'adaptive boosting': # Letter here,\n",
-    "    'logistic regression': # Letter here,\n",
-    "    'linear regression': # Letter here\n",
+    "    'decision trees': c, # Letter here,\n",
+    "    'random forest': c,# Letter here,\n",
+    "    'adaptive boosting':c, # Letter here,\n",
+    "    'logistic regression':b, # Letter here,\n",
+    "    'linear regression': a# Letter here\n",
     "}\n",
     "\n",
     "#checks your answer, no need to change this code\n",
@@ -69,13 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import models from sklearn - notice you will want to use \n",
     "# the regressor version (not classifier) - googling to find \n",
-    "# each of these is what we all do!\n"
+    "# each of these is what we all do!\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import AdaBoostRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n"
    ]
   },
   {
@@ -87,12 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate each of the models you imported\n",
-    "# For now use the defaults for all the hyperparameters\n"
+    "# For now use the defaults for all the hyperparameters\n",
+    "dt_mod = DecisionTreeRegressor()\n",
+    "rf_mod = RandomForestRegressor()\n",
+    "ada_mod = AdaBoostRegressor()\n",
+    "lr_mod = LinearRegression()\n"
    ]
   },
   {
@@ -104,11 +121,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Fit each of your models using the training data\n"
+    "# Fit each of your models using the training data\n",
+    "dt_mod.fit(X_train, y_train)\n",
+    "rf_mod.fit(X_train, y_train)\n",
+    "ada_mod.fit(X_train, y_train)\n",
+    "lr_mod.fit(X_train, y_train)"
    ]
   },
   {
@@ -120,11 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Predict on the test values for each model\n"
+    "# Predict on the test values for each model\n",
+    "pred_dt = dt_mod.predict(X_test)\n",
+    "pred_rf = rf_mod.predict(X_test)\n",
+    "pred_ada = ada_mod.predict(X_test)\n",
+    "pred_lr = lr_mod.predict(X_test)"
    ]
   },
   {
@@ -136,9 +172,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That's right! Looks like you know your metrics!\n"
+     ]
+    }
+   ],
    "source": [
     "# potential model options\n",
     "a = 'regression'\n",
@@ -147,13 +191,13 @@
     "\n",
     "#\n",
     "metrics = {\n",
-    "    'precision': # Letter here,\n",
-    "    'recall': # Letter here,\n",
-    "    'accuracy': # Letter here,\n",
-    "    'r2_score': # Letter here,\n",
-    "    'mean_squared_error': # Letter here,\n",
-    "    'area_under_curve': # Letter here, \n",
-    "    'mean_absolute_area' # Letter here \n",
+    "    'precision': b,\n",
+    "    'recall': b,\n",
+    "    'accuracy': b,\n",
+    "    'r2_score': a,\n",
+    "    'mean_squared_error': a,\n",
+    "    'area_under_curve': b, \n",
+    "    'mean_absolute_area': a \n",
     "}\n",
     "\n",
     "#checks your answer, no need to change this code\n",
@@ -169,11 +213,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the metrics from sklearn\n"
+    "# Import the metrics from sklearn\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
    ]
   },
   {
@@ -185,9 +230,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.752531012634\n",
+      "0.752531012634\n",
+      "Since the above match, we can see that we have correctly calculated the r2 value.\n"
+     ]
+    }
+   ],
    "source": [
     "def r2(actual, preds):\n",
     "    '''\n",
@@ -202,8 +257,8 @@
     "    return 1 - sse/sst\n",
     "\n",
     "# Check solution matches sklearn\n",
-    "print(r2(y_test, preds_tree))\n",
-    "print(r2_score(y_test, preds_tree))\n",
+    "print(r2(y_test, pred_dt))\n",
+    "print(r2_score(y_test, pred_dt))\n",
     "print(\"Since the above match, we can see that we have correctly calculated the r2 value.\")"
    ]
   },
@@ -216,9 +271,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.7280838323\n",
+      "18.7280838323\n",
+      "If the above match, you are all set!\n"
+     ]
+    }
+   ],
    "source": [
     "def mse(actual, preds):\n",
     "    '''\n",
@@ -229,12 +294,12 @@
     "    returns the mean squared error as a float\n",
     "    '''\n",
     "    \n",
-    "    return None # calculate mse here\n",
+    "    return np.sum((actual-preds)**2)/len(preds) # calculate mse here\n",
     "\n",
     "\n",
     "# Check your solution matches sklearn\n",
-    "print(mse(y_test, preds_tree))\n",
-    "print(mean_squared_error(y_test, preds_tree))\n",
+    "print(mse(y_test, pred_dt))\n",
+    "print(mean_squared_error(y_test, pred_dt))\n",
     "print(\"If the above match, you are all set!\")"
    ]
   },
@@ -247,9 +312,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.00299401198\n",
+      "3.00299401198\n",
+      "If the above match, you are all set!\n"
+     ]
+    }
+   ],
    "source": [
     "def mae(actual, preds):\n",
     "    '''\n",
@@ -260,11 +335,11 @@
     "    returns the mean absolute error as a float\n",
     "    '''\n",
     "    \n",
-    "    return None # calculate the mae here\n",
+    "    return np.sum(abs(actual-preds))/len(preds) # calculate the mae here\n",
     "\n",
     "# Check your solution matches sklearn\n",
-    "print(mae(y_test, preds_tree))\n",
-    "print(mean_absolute_error(y_test, preds_tree))\n",
+    "print(mae(y_test, pred_dt))\n",
+    "print(mean_absolute_error(y_test, pred_dt))\n",
     "print(\"If the above match, you are all set!\")"
    ]
   },
@@ -277,9 +352,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That's right!  The random forest was best in terms of all the metrics this time!\n"
+     ]
+    }
+   ],
    "source": [
     "#match each metric to the model that performed best on it\n",
     "a = 'decision tree'\n",
@@ -289,9 +372,9 @@
     "\n",
     "\n",
     "best_fit = {\n",
-    "    'mse': # letter here,\n",
-    "    'r2': # letter here,\n",
-    "    'mae': # letter here\n",
+    "    'mse': b,\n",
+    "    'r2': b,\n",
+    "    'mae': b\n",
     "}\n",
     "\n",
     "#Tests your answer - don't change this code\n",
@@ -309,10 +392,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def print_metrics(y_true, preds, model_name=None):\n",
+    "    '''\n",
+    "    INPUT:\n",
+    "    y_true - the y values that are actually true in the dataset (numpy array or pandas series)\n",
+    "    preds - the predictions for those values from some model (numpy array or pandas series)\n",
+    "    model_name - (str - optional) a name associated with the model if you would like to add it to the print statements \n",
+    "    \n",
+    "    OUTPUT:\n",
+    "    None - prints the accuracy, precision, recall, and F1 score\n",
+    "    '''\n",
+    "    if model_name == None:\n",
+    "        print('Mean Squared Error: ', format(mean_squared_error(y_true, preds)))\n",
+    "        print('R2 Score: ', format(r2_score(y_true, preds)))\n",
+    "        print('Mean Absolute Error: ', format(mean_absolute_error(y_true, preds)))\n",
+    "        print('\\n\\n')\n",
+    "\n",
+    "    else:\n",
+    "        print('Mean Squared Error: ' + model_name + ' :', format(mean_squared_error(y_true, preds)))\n",
+    "        print('R2 Score: ' + model_name + ' :', format(r2_score(y_true, preds)))\n",
+    "        print('Mean Absolute Error: ' + model_name + ' :', format(mean_absolute_error(y_true, preds)))\n",
+    "        print('\\n\\n')\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: Decision Trees : 18.728083832335326\n",
+      "R2 Score: Decision Trees : 0.7525310126336143\n",
+      "Mean Absolute Error: Decision Trees : 3.002994011976048\n",
+      "\n",
+      "\n",
+      "\n",
+      "Mean Squared Error: Random Forest : 9.68973592814371\n",
+      "R2 Score: Random Forest : 0.8719618536817283\n",
+      "Mean Absolute Error: Random Forest : 2.179820359281437\n",
+      "\n",
+      "\n",
+      "\n",
+      "Mean Squared Error: Ada Boost : 15.22878432125161\n",
+      "R2 Score: Ada Boost : 0.7987700253512113\n",
+      "Mean Absolute Error: Ada Boost : 2.8086506559175746\n",
+      "\n",
+      "\n",
+      "\n",
+      "Mean Squared Error: Linear Regression : 20.747143360309067\n",
+      "R2 Score: Linear Regression : 0.7258515818230032\n",
+      "Mean Absolute Error: Linear Regression : 3.1512878365884154\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For decsision Trees\n",
+    "print_metrics(y_test, pred_dt, 'Decision Trees')\n",
+    "\n",
+    "print_metrics(y_test, pred_rf, 'Random Forest')\n",
+    "print_metrics(y_test, pred_ada, 'Ada Boost')\n",
+    "print_metrics(y_test, pred_lr, 'Linear Regression')\n"
+   ]
   },
   {
    "cell_type": "code",
